WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27565
Null deref in JSObject::mark due to null xhr wrapper
https://bugs.webkit.org/show_bug.cgi?id=27565
Summary
Null deref in JSObject::mark due to null xhr wrapper
Oliver Hunt
Reported
2009-07-22 14:55:14 PDT
<
rdar://7002614
> event binding code assumes that the xhr wrapper object will always exist.
Attachments
Fixeration
(1.75 KB, patch)
2009-07-22 15:02 PDT
,
Oliver Hunt
adele
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2009-07-22 15:02:12 PDT
Created
attachment 33297
[details]
Fixeration
Oliver Hunt
Comment 2
2009-07-22 15:13:40 PDT
Committed
r46246
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug