Null deref in JSObject::mark due to null xhr wrapper https://bugs.webkit.org/show_bug.cgi?id=27565

Reviewed by Adele Peterson.

Make event target binding for appcache and xhr behave in the same way as
it does for all other events.

No test as I couldn't make a testcase which was remotely reliable.

Canonical link: https://commits.webkit.org/37859@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46246 268f45cc-cd09-0410-ab3c-d52691b4dbfc